# quanta

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  QUASAR_FRAMEWORK.md  README.md  SECURITY.md  TESTNET_MANUAL_GUIDE.md  TEST_COMMANDS.txt  TOKENOMICS.md  WHITEPAPER.md  build.rs  deploy-simple.sh  deploy-to-server.sh  docker-compose.testnet.yml  docker-compose.yml  entrypoint.sh  explorer.html  node1_logs.txt  quanta-node1.toml  quanta-node2.toml  quanta-node3.toml  quanta-production.toml.template  quanta.example.toml  quanta.toml  run.txt  server-config-testnet.toml  testnet_entrypoint.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  question.md
.github/workflows/: ci.yml
contracts/qsp_token/: Cargo.toml  README.md
contracts/qsp_token/src/: lib.rs
gitbook/: README.md  SUMMARY.md  api-reference.md  configuration.md  contributing.md  installation.md  mining-guide.md  node-operator-guide.md  p2p-networking.md  quantum-resistance.md  quick-start.md  security.md  technical-specs.md  wallet-operations.md
monitoring/: alerts.yml  prometheus.yml
src/: api.rs  block.rs  blockchain.rs  config.rs  contract.rs  contract_executor.rs  crypto.rs  hd_wallet.rs  lib.rs  main.rs  mempool.rs  merkle.rs  multisig.rs  probestack.rs  probestack_stub.c  prometheus_metrics.rs  quantum_wallet.rs  storage.rs  tests.rs  transaction.rs
src/api/: handlers.rs  mod.rs
src/config/: mod.rs  types.rs
src/consensus/: blockchain.rs  mempool.rs  mod.rs
src/core/: block.rs  merkle.rs  mod.rs  transaction.rs
src/crypto/: hd_wallet.rs  mod.rs  multisig.rs  signatures.rs  wallet.rs
src/network/: discovery.rs  mod.rs  network.rs  peer.rs  protocol.rs
src/p2p/: discovery.rs  mod.rs  network.rs  peer.rs  protocol.rs
src/rpc/: client.rs  mod.rs  server.rs  types.rs
src/storage/: db.rs  mod.rs
tools/faucet/: faucet.js  index.html  package.json
tools/wallet-extension/public/: background.js  manifest.json  popup.html  popup.js  styles.css
tools/wallet-extension/public/pkg/: quanta_wallet_wasm.js
tools/wallet-extension/public/pkg_v2/: quanta_wallet_wasm.js
tools/wallet-extension/wasm/: Cargo.toml
tools/wallet-extension/wasm/src/: lib.rs
