[package]
name = "quanta"
version = "1.0.0"
edition = "2021"
description = "QUANTA - Quantum-resistant blockchain with Falcon signatures"

[lib]
name = "quanta"
path = "src/lib.rs"

[[bin]]
name = "quanta"
path = "src/main.rs"

[dependencies]
# Post-Quantum Cryptography - Falcon signatures
pqcrypto-falcon = "0.3"
pqcrypto-traits = "0.3"

# SHA3 hashing (quantum-resistant)
sha3 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database persistence
sled = "0.34"

# Post-Quantum Encryption for wallets (Kyber KEM)
pqcrypto-kyber = "0.8"
chacha20poly1305 = "0.10"
argon2 = "0.5"

# Networking
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
bincode = "1.3"  # Binary serialization for P2P messages
futures = "0.3"
async-trait = "0.1"
uuid = { version = "1.6", features = ["v4"] }
reqwest = { version = "0.11", features = ["json"] }  # For RPC client

# WebSocket
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio-tungstenite = "0.21"

# Thread safety
parking_lot = "0.12"
tokio-util = "0.7"  # For CancellationToken

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
hex = "0.4"
chrono = "0.4"
zeroize = { version = "1.7", features = ["derive"] }
rand = "0.8"
thiserror = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }
rpassword = "7.3"

# Configuration
config = "0.14"
toml = "0.8"

# TLS/Security
tokio-rustls = "0.25"
rustls = "0.22"
rustls-pemfile = "2.0"

# HD Wallet (BIP32/39)
bip39 = "2.0"
hmac = "0.12"
dashmap = "6.1.0"
tower_governor = "0.8.0"

# For tests
[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
